--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,14 @@ AddOutputFilterByType DEFLATE application/xhtml+xml
 AddOutputFilterByType DEFLATE application/rss+xml
 AddOutputFilterByType DEFLATE application/javascript
 AddOutputFilterByType DEFLATE application/x-javascript
+
+<ifModule mod_expires.c>
+ExpiresActive On
+ExpiresByType text/html "access plus 7200 seconds"
+ExpiresByType image/gif "access plus 864000 seconds"
+ExpiresByType image/jpg "access plus 864000 seconds"
+ExpiresByType image/png "access plus 864000 seconds"
+ExpiresByType text/css "access plus 864000 seconds"
+ExpiresByType text/javascript "access plus 864000 seconds"
+ExpiresByType application/javascript "access plus 864000 seconds"
+</ifModule>
